--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,11 +57,11 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.appcompat:appcompat:1.2.0'
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:1.4.21"
+    implementation 'org.jetbrains.kotlin:kotlin-stdlib:1.4.31'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    testImplementation 'junit:junit:4.13.1'
+    testImplementation 'junit:junit:4.13.2'
     //Android ktx,KTX 扩展程序可以为 Jetpack、Android 平台及其他 API 提供简洁的惯用 Kotlin 代码。
-    implementation 'androidx.core:core:1.5.0-beta01'
+    implementation 'androidx.core:core-ktx:1.5.0-beta03'
     androidTestImplementation 'androidx.test:runner:1.3.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     //Google团队开发的Material风格的新组件支持库
@@ -72,8 +72,6 @@ dependencies {
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
     //CardView控件,纸片布局
     implementation 'androidx.cardview:cardview:1.0.0'
-    //新的viewPager2控件,找机会试试
-    implementation "androidx.viewpager2:viewpager2:1.0.0"
     //Butter Knife,黄油刀,view注解框架
     implementation 'com.jakewharton:butterknife:10.2.3'
     kapt 'com.jakewharton:butterknife-compiler:10.2.3'
@@ -86,7 +84,7 @@ dependencies {
     //获取图片的属性标签
     implementation 'androidx.exifinterface:exifinterface:1.3.2'
     //okHttp轻量级网络框架
-    implementation 'com.squareup.okhttp3:okhttp:4.9.0'
+    implementation 'com.squareup.okhttp3:okhttp:5.0.0-alpha.2'
     //android文件管理类
     implementation 'androidx.documentfile:documentfile:1.0.1'
     //AndroidPdfViewer 查看pdf的控件
@@ -94,9 +92,11 @@ dependencies {
     //Android的原始Socket，HTTP（s）客户端/服务器和WebSocket库
     implementation 'com.koushikdutta.async:androidasync:3.1.0'
     //生命周期感知型组件
-    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.3.0"
-    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.3.0"
-    implementation "androidx.lifecycle:lifecycle-common-java8:2.3.0"
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:$rootProject.lifecycleVersion"
+    //LiveData
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:$rootProject.lifecycleVersion"
+    // ViewModel
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$rootProject.lifecycleVersion"
     // Room 组件(数据库框架)
     //Android官网依赖是这样的，java开发人员使用
 //    implementation "android.arch.persistence.room:runtime:$room_version"
@@ -105,51 +105,40 @@ dependencies {
 //    implementation "android.arch.persistence.room:runtime:$room_version"
 //    kapt "android.arch.persistence.room:compiler:$room_version"
 //如果您已迁移到androidx
-    implementation "androidx.room:room-runtime:2.2.6"
-    kapt "androidx.room:room-compiler:2.2.6"
+    implementation "androidx.room:room-runtime:$rootProject.roomVersion"
+    kapt "androidx.room:room-compiler:$rootProject.roomVersion"
     //Kotlin扩展程序和协同程序对Room的支持
-    implementation "androidx.room:room-ktx:2.2.6"
+    implementation "androidx.room:room-ktx:$rootProject.roomVersion"
     // Paging 3 组件(数据分页)
-    implementation "androidx.paging:paging-runtime-ktx:3.0.0-beta01"
-    implementation "androidx.paging:paging-compose:1.0.0-alpha07"
+    implementation "androidx.paging:paging-runtime-ktx:3.0.0-beta02"
     //navigation组件(fragment管理)
-    implementation "androidx.navigation:navigation-runtime-ktx:2.3.3"
-    implementation "androidx.navigation:navigation-fragment-ktx:2.3.3"
-    implementation "androidx.navigation:navigation-ui-ktx:2.3.3"
-    implementation "androidx.navigation:navigation-dynamic-features-fragment:2.3.3"
-    implementation 'androidx.navigation:navigation-compose:1.0.0-alpha07'
+    implementation "androidx.navigation:navigation-fragment-ktx:$rootProject.navigationVersion"
+    implementation "androidx.navigation:navigation-ui-ktx:$rootProject.navigationVersion"
     //activity的kotlin强化库
-    implementation "androidx.activity:activity-ktx:1.2.0"
+    implementation "androidx.activity:activity-ktx:1.2.1"
     //Fragment KTX 提供了一系列扩展程序以简化 Fragment API。
-    implementation "androidx.fragment:fragment-ktx:1.3.0"
+    implementation "androidx.fragment:fragment-ktx:1.3.1"
     //Android 上的 Kotlin 协程
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.4.2"
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.4.2'
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$rootProject.coroutinesVersion"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$rootProject.coroutinesVersion"
     //Collection 扩展程序包含在 Android 的节省内存的集合库中使用的实用函数，包括 ArrayMap、LongParseArray、LruCache 等等。
     implementation "androidx.collection:collection-ktx:1.1.0"
     //ViewModel KTX 库提供了一个 viewModelScope() 函数，可让您更轻松地从 ViewModel 启动协程。
     // CoroutineScope 绑定至 Dispatchers.Main，并且会在清除 ViewModel 后自动取消。
-    // 您可以使用 viewModelScope()，而无需为每个 ViewModel 创建一个新范围。
-    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.0"
     //使用 Hilt 实现依赖项注入
-    implementation 'com.google.dagger:hilt-android:2.31.2-alpha'
-    kapt 'com.google.dagger:hilt-android-compiler:2.31.2-alpha'
-    //使用 Hilt 注入 ViewModel 对象
-    implementation "androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha03"
-    kapt "androidx.hilt:hilt-compiler:1.0.0-alpha03"
-    //使用 Hilt 注入 WorkManager
-    implementation 'androidx.hilt:hilt-work:1.0.0-alpha03'
+    implementation "com.google.dagger:hilt-android:$rootProject.hiltVersion"
+    kapt "com.google.dagger:hilt-android-compiler:$rootProject.hiltVersion"
     //添加 WorkManager 的依赖项Kotlin + coroutines
     implementation "androidx.work:work-runtime-ktx:2.5.0"
     //CameraX核心库
-    implementation "androidx.camera:camera-core:1.1.0-alpha01"
-    implementation "androidx.camera:camera-camera2:1.1.0-alpha01"
+    implementation "androidx.camera:camera-core:$rootProject.cameraxVersion"
+    implementation "androidx.camera:camera-camera2:$rootProject.cameraxVersion"
     // CameraX生命周期库
-    implementation "androidx.camera:camera-lifecycle:1.1.0-alpha01"
+    implementation "androidx.camera:camera-lifecycle:$rootProject.cameraxVersion"
     // CameraX View类
-    implementation "androidx.camera:camera-view:1.0.0-alpha21"
+    implementation "androidx.camera:camera-view:1.0.0-alpha22"
     // CameraX扩展库
-    implementation "androidx.camera:camera-extensions:1.0.0-alpha21"
+    implementation "androidx.camera:camera-extensions:1.0.0-alpha22"
     //数据储存
-    implementation "androidx.datastore:datastore:1.0.0-alpha06"
+    implementation "androidx.datastore:datastore:1.0.0-alpha08"
 }
