--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,6 @@
 buildscript {
     //在单个位置定义版本(以防止某个框架的不同组件版本不同产生异常)
     ext {
-
         roomVersion = "2.2.6"
         lifecycleVersion = "2.3.0"
         hiltVersion = '2.33-beta'
@@ -20,7 +19,7 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:4.1.2'
+        classpath 'com.android.tools.build:gradle:4.1.3'
         //kotlin支持
         classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.4.31'
         //Butter Knife需要的支持
@@ -31,6 +30,9 @@ buildscript {
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.3.4"
         //Hilt插件, Hilt是 Android 的依赖项注入库，可减少在项目中执行手动依赖项注入的样板代码。
         classpath "com.google.dagger:hilt-android-gradle-plugin:$hiltVersion"
+        //protobuf序列化语言的插件,可自动生成对应的 Java 文件。
+        //在这查看最新版本https://mvnrepository.com/artifact/com.google.protobuf/protobuf-gradle-plugin
+        classpath "com.google.protobuf:protobuf-gradle-plugin:0.8.13"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
