--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -139,8 +139,10 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:targetApi="n">
-        <activity android:name="com.sq26.experience.ui.activity.DataStoreActivity" />
-        <activity android:name="com.sq26.experience.ui.activity.MotionLayoutActivity" />
+        <activity android:name=".ui.activity.file.FileImageDirectoryActivity"
+            android:theme="@style/FileImageAppTheme"></activity>
+        <activity android:name=".ui.activity.DataStoreActivity" />
+        <activity android:name=".ui.activity.MotionLayoutActivity" />
         <activity android:name=".ui.activity.NavigationDemoActivity" />
         <activity android:name=".ui.activity.DataBindingActivity" />
         <activity android:name=".ui.activity.KotlinActivity" />
@@ -153,7 +155,7 @@
             <!--构建项目时，Navigation 组件会将 <nav-graph> 元素替换为生成的 <intent-filter> 元素，以匹配导航图中的所有深层链接。-->
             <nav-graph android:value="@navigation/nav_navigation_graph" />
         </activity>
-        <activity android:name=".ui.activity.file.FileImageActivity" />
+        <activity android:name=".ui.activity.file.FileImageListActivity" />
         <activity android:name=".ui.util.PdfActivity">
 
             <!-- ignore忽略app链接错误 -->
@@ -210,7 +212,8 @@
         <!-- 二维码识别页 -->
         <activity android:name=".ui.activity.ScanCodeActivity" />
         <!--        主页-->
-        <activity android:name=".ui.activity.MainActivity">
+        <activity android:name=".ui.activity.MainActivity"
+            android:theme="@style/HomeAppTheme">
             <intent-filter>
                 <!-- 应用程序入口 -->
                 <action android:name="android.intent.action.MAIN" />
@@ -219,17 +222,17 @@
             </intent-filter>
         </activity>
         <!--
-                    下载服务
-                    name :服务所在的位置
-                    process:指定服务运行的进程
-                -->
+                        下载服务
+                        name :服务所在的位置
+                        process:指定服务运行的进程
+                    -->
         <service
             android:name=".util.network.download.DownloadService"
             android:process=":sq26" />
         <!--
-                    跨进程通信服务
-                    需要声明android:exported="true"，这样别的APP才能访问。
-                -->
+                        跨进程通信服务
+                        需要声明android:exported="true"，这样别的APP才能访问。
+                    -->
         <service
             android:name=".service.AIDLService"
             android:exported="true"
@@ -243,12 +246,12 @@
             </intent-filter>
         </service>
         <!--
-                    该provider用于本地文件访问
-                    authorities：是该项目的包名+provider
-                    grantUriPermissions：必须是true，表示授予 URI 临时访问权限
-                    exported：必须是false
-                    resource：中的@xml/file_paths是我们接下来要在资源文件目录下添加的文件
-                -->
+                        该provider用于本地文件访问
+                        authorities：是该项目的包名+provider
+                        grantUriPermissions：必须是true，表示授予 URI 临时访问权限
+                        exported：必须是false
+                        resource：中的@xml/file_paths是我们接下来要在资源文件目录下添加的文件
+                    -->
         <provider
             android:name="androidx.core.content.FileProvider"
             android:authorities="${applicationId}.FileProvider"
