侵入式状态栏更新Android11支持

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -204,7 +204,8 @@
         <!-- 权限申请页 -->
         <activity android:name=".ui.activity.AuthorizedOperationActivity" />
         <!-- 通知栏管理页 -->
-        <activity android:name=".ui.activity.StatusBarActivity" />
+        <activity android:name=".ui.activity.StatusBarActivity"
+            android:theme="@style/ActivityBarTheme"/>
         <!-- 相机页 -->
         <activity android:name=".ui.activity.CameraActivity" />
         <!-- 测试页 -->
