--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,15 +1,17 @@
+plugins {
 //Android项目开发插件
-apply plugin: 'com.android.application'
-//kotlin开发插件
-apply plugin: 'kotlin-android'
+    id 'com.android.application'
+//kotlin Android开发插件
+    id 'kotlin-android'
 //kotlin注解处理插件，kapt是kotlin的注解处理器，kapt 也能够处理 Java 文件，所以需要替换 annotationProcessor 关键字
-apply plugin: 'kotlin-kapt'
+    id 'kotlin-kapt'
 //应用Hilt插件 ,Hilt是 Android 的依赖项注入库，可减少在项目中执行手动依赖项注入的样板代码。
-apply plugin: 'dagger.hilt.android.plugin'
+    id 'dagger.hilt.android.plugin'
 //导航的插件,safeargs用于在fragment之间跳转传输少量数据,去掉后面的.kotlin就是适用于 Java 模块或 Java 和 Kotlin 混合模块的 Java 语言代码
-apply plugin: "androidx.navigation.safeargs.kotlin"
+    id 'androidx.navigation.safeargs.kotlin'
 //启用protobuf语言插件
-apply plugin: "com.google.protobuf"
+    id 'com.google.protobuf'
+}
 
 //控制台有乱码
 //Android Studio\bin下的
@@ -89,11 +91,11 @@ protobuf {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.appcompat:appcompat:1.2.0'
-    implementation 'org.jetbrains.kotlin:kotlin-stdlib:1.4.31'
+    implementation 'org.jetbrains.kotlin:kotlin-stdlib:1.4.32'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.13.2'
     //Android ktx,KTX 扩展程序可以为 Jetpack、Android 平台及其他 API 提供简洁的惯用 Kotlin 代码。
-    implementation 'androidx.core:core-ktx:1.6.0-alpha01'
+    implementation 'androidx.core:core-ktx:1.6.0-alpha02'
     androidTestImplementation 'androidx.test:runner:1.3.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     //Google团队开发的Material风格的新组件支持库
@@ -172,12 +174,16 @@ dependencies {
     // CameraX扩展库
     implementation "androidx.camera:camera-extensions:1.0.0-alpha23"
     //类型化数据储存,将数据作为自定义数据类型的实例进行存储。此实现要求您使用协议缓冲区来定义架构，但可以确保类型安全。
-    implementation "androidx.datastore:datastore:1.0.0-alpha08"
+    implementation "androidx.datastore:datastore:1.0.0-beta01"
     //便捷数据储存,使用键存储和访问数据。此实现不需要预定义的架构，也不确保类型安全。
-    implementation "androidx.datastore:datastore-preferences:1.0.0-alpha08"
+    implementation "androidx.datastore:datastore-preferences:1.0.0-beta01"
     //protobuf的使用依赖
     implementation "com.google.protobuf:protobuf-lite:3.0.1"
     //moshi是kotlin专为kotlin设计的json序列化和反序列化框架
     implementation 'com.squareup.moshi:moshi:1.11.0'
     kapt 'com.squareup.moshi:moshi-kotlin-codegen:1.11.0'
+    //自定义注解
+//    implementation project(path: ':libAnnotation')
+//    kapt project(path: ':libAnnotationProcessor')
+
 }
