--- a/app/build.gradle
+++ b/app/build.gradle
@@ -90,12 +90,12 @@ protobuf {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'androidx.appcompat:appcompat:1.2.0'
-    implementation 'org.jetbrains.kotlin:kotlin-stdlib:1.4.32'
+    implementation 'androidx.appcompat:appcompat:1.3.0'
+    implementation 'org.jetbrains.kotlin:kotlin-stdlib:1.5.20'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.13.2'
     //Android ktx,KTX 扩展程序可以为 Jetpack、Android 平台及其他 API 提供简洁的惯用 Kotlin 代码。
-    implementation 'androidx.core:core-ktx:1.6.0-alpha02'
+    implementation 'androidx.core:core-ktx:1.6.0-rc01'
     androidTestImplementation 'androidx.test:runner:1.3.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     //Google团队开发的Material风格的新组件支持库
@@ -103,7 +103,7 @@ dependencies {
     //constraintLayout布局控件
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     //RecyclerView控件
-    implementation 'androidx.recyclerview:recyclerview:1.2.0'
+    implementation 'androidx.recyclerview:recyclerview:1.2.1'
     //CardView控件,纸片布局
     implementation 'androidx.cardview:cardview:1.0.0'
     //Butter Knife,黄油刀,view注解框架
@@ -114,7 +114,7 @@ dependencies {
     //zxing框架核心
     implementation 'com.google.zxing:core:3.4.1'
     //Fresco框架
-    implementation 'com.facebook.fresco:fresco:2.2.0'
+    implementation 'com.facebook.fresco:fresco:2.3.0'
     //获取图片的属性标签
     implementation 'androidx.exifinterface:exifinterface:1.3.2'
     //okHttp轻量级网络框架
@@ -144,14 +144,14 @@ dependencies {
     //Kotlin扩展程序和协同程序对Room的支持
     implementation "androidx.room:room-ktx:$rootProject.roomVersion"
     // Paging 3 组件(数据分页)
-    implementation "androidx.paging:paging-runtime-ktx:3.0.0-beta03"
+    implementation "androidx.paging:paging-runtime-ktx:3.1.0-alpha01"
     //navigation组件(fragment管理)
     implementation "androidx.navigation:navigation-fragment-ktx:$rootProject.navigationVersion"
     implementation "androidx.navigation:navigation-ui-ktx:$rootProject.navigationVersion"
     //activity的kotlin强化库
-    implementation "androidx.activity:activity-ktx:1.2.2"
+    implementation "androidx.activity:activity-ktx:1.2.3"
     //Fragment KTX 提供了一系列扩展程序以简化 Fragment API。
-    implementation "androidx.fragment:fragment-ktx:1.3.2"
+    implementation "androidx.fragment:fragment-ktx:1.3.5"
     //Android 上的 Kotlin 协程
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$rootProject.coroutinesVersion"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$rootProject.coroutinesVersion"
@@ -163,25 +163,25 @@ dependencies {
     implementation "com.google.dagger:hilt-android:$rootProject.hiltVersion"
     kapt "com.google.dagger:hilt-android-compiler:$rootProject.hiltVersion"
     //添加 WorkManager 的依赖项Kotlin + coroutines
-    implementation "androidx.work:work-runtime-ktx:2.5.0"
+    implementation "androidx.work:work-runtime-ktx:2.6.0-beta01"
     //CameraX核心库
     implementation "androidx.camera:camera-core:$rootProject.cameraxVersion"
     implementation "androidx.camera:camera-camera2:$rootProject.cameraxVersion"
     // CameraX生命周期库
     implementation "androidx.camera:camera-lifecycle:$rootProject.cameraxVersion"
     // CameraX View类
-    implementation "androidx.camera:camera-view:1.0.0-alpha23"
+    implementation "androidx.camera:camera-view:1.0.0-alpha25"
     // CameraX扩展库
-    implementation "androidx.camera:camera-extensions:1.0.0-alpha23"
+    implementation "androidx.camera:camera-extensions:1.0.0-alpha25"
     //类型化数据储存,将数据作为自定义数据类型的实例进行存储。此实现要求您使用协议缓冲区来定义架构，但可以确保类型安全。
-    implementation "androidx.datastore:datastore:1.0.0-beta01"
+    implementation "androidx.datastore:datastore:1.0.0-beta02"
     //便捷数据储存,使用键存储和访问数据。此实现不需要预定义的架构，也不确保类型安全。
-    implementation "androidx.datastore:datastore-preferences:1.0.0-beta01"
+    implementation "androidx.datastore:datastore-preferences:1.0.0-beta02"
     //protobuf的使用依赖
     implementation "com.google.protobuf:protobuf-lite:3.0.1"
     //moshi是kotlin专为kotlin设计的json序列化和反序列化框架
-    implementation 'com.squareup.moshi:moshi:1.11.0'
-    kapt 'com.squareup.moshi:moshi-kotlin-codegen:1.11.0'
+    implementation 'com.squareup.moshi:moshi:1.12.0'
+    kapt 'com.squareup.moshi:moshi-kotlin-codegen:1.12.0'
     //自定义注解
 //    implementation project(path: ':libAnnotation')
 //    kapt project(path: ':libAnnotationProcessor')
