--- a/build.gradle
+++ b/build.gradle
@@ -3,12 +3,12 @@
 buildscript {
     //在单个位置定义版本(以防止某个框架的不同组件版本不同产生异常)
     ext {
-        roomVersion = "2.2.6"
+        roomVersion = "2.3.0"
         lifecycleVersion = "2.3.1"
         hiltVersion = '2.33-beta'
         navigationVersion = "2.3.5"
-        coroutinesVersion = "1.4.2"
-        cameraxVersion = "1.1.0-alpha03"
+        coroutinesVersion = "1.4.3"
+        cameraxVersion = "1.1.0-alpha05"
         kotlin_version = '1.4.32'
     }
 
@@ -21,9 +21,9 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:4.2.1'
-        //kotlin支持
-        classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.4.32'
-        //Butter Knife需要的支持
+        //kotlin插件
+        classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.5.0'
+        //Butter Knife需要的插件
         classpath 'com.jakewharton:butterknife-gradle-plugin:10.2.3'
         //使用 Safe Args 确保类型安全
         //如需在目的地之间导航，建议使用 Safe Args Gradle 插件。
