--- a/app/build.gradle
+++ b/app/build.gradle
@@ -90,16 +90,16 @@ protobuf {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'androidx.appcompat:appcompat:1.3.0'
+    implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'org.jetbrains.kotlin:kotlin-stdlib:1.5.20'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.13.2'
     //Android ktx,KTX 扩展程序可以为 Jetpack、Android 平台及其他 API 提供简洁的惯用 Kotlin 代码。
-    implementation 'androidx.core:core-ktx:1.6.0-rc01'
-    androidTestImplementation 'androidx.test:runner:1.3.0'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    implementation 'androidx.core:core-ktx:1.7.0-alpha01'
+    androidTestImplementation 'androidx.test:runner:1.4.0'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     //Google团队开发的Material风格的新组件支持库
-    implementation 'com.google.android.material:material:1.3.0'
+    implementation 'com.google.android.material:material:1.4.0'
     //constraintLayout布局控件
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     //RecyclerView控件
@@ -110,7 +110,7 @@ dependencies {
     implementation 'com.jakewharton:butterknife:10.2.3'
     kapt 'com.jakewharton:butterknife-compiler:10.2.3'
     //fastJson json解析库
-    implementation 'com.alibaba:fastjson:1.2.75'
+    implementation 'com.alibaba:fastjson:1.2.76'
     //zxing框架核心
     implementation 'com.google.zxing:core:3.4.1'
     //Fresco框架
@@ -144,14 +144,14 @@ dependencies {
     //Kotlin扩展程序和协同程序对Room的支持
     implementation "androidx.room:room-ktx:$rootProject.roomVersion"
     // Paging 3 组件(数据分页)
-    implementation "androidx.paging:paging-runtime-ktx:3.1.0-alpha01"
+    implementation "androidx.paging:paging-runtime-ktx:3.1.0-alpha03"
     //navigation组件(fragment管理)
     implementation "androidx.navigation:navigation-fragment-ktx:$rootProject.navigationVersion"
     implementation "androidx.navigation:navigation-ui-ktx:$rootProject.navigationVersion"
     //activity的kotlin强化库
-    implementation "androidx.activity:activity-ktx:1.2.3"
+    implementation "androidx.activity:activity-ktx:1.2.4"
     //Fragment KTX 提供了一系列扩展程序以简化 Fragment API。
-    implementation "androidx.fragment:fragment-ktx:1.3.5"
+    implementation "androidx.fragment:fragment-ktx:1.3.6"
     //Android 上的 Kotlin 协程
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$rootProject.coroutinesVersion"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$rootProject.coroutinesVersion"
@@ -163,20 +163,20 @@ dependencies {
     implementation "com.google.dagger:hilt-android:$rootProject.hiltVersion"
     kapt "com.google.dagger:hilt-android-compiler:$rootProject.hiltVersion"
     //添加 WorkManager 的依赖项Kotlin + coroutines
-    implementation "androidx.work:work-runtime-ktx:2.6.0-beta01"
+    implementation "androidx.work:work-runtime-ktx:2.6.0-beta02"
     //CameraX核心库
     implementation "androidx.camera:camera-core:$rootProject.cameraxVersion"
     implementation "androidx.camera:camera-camera2:$rootProject.cameraxVersion"
     // CameraX生命周期库
     implementation "androidx.camera:camera-lifecycle:$rootProject.cameraxVersion"
     // CameraX View类
-    implementation "androidx.camera:camera-view:1.0.0-alpha25"
+    implementation "androidx.camera:camera-view:1.0.0-alpha27"
     // CameraX扩展库
-    implementation "androidx.camera:camera-extensions:1.0.0-alpha25"
+    implementation "androidx.camera:camera-extensions:1.0.0-alpha27"
     //类型化数据储存,将数据作为自定义数据类型的实例进行存储。此实现要求您使用协议缓冲区来定义架构，但可以确保类型安全。
-    implementation "androidx.datastore:datastore:1.0.0-beta02"
+    implementation "androidx.datastore:datastore:1.0.0-rc02"
     //便捷数据储存,使用键存储和访问数据。此实现不需要预定义的架构，也不确保类型安全。
-    implementation "androidx.datastore:datastore-preferences:1.0.0-beta02"
+    implementation "androidx.datastore:datastore-preferences:1.0.0-rc02"
     //protobuf的使用依赖
     implementation "com.google.protobuf:protobuf-lite:3.0.1"
     //moshi是kotlin专为kotlin设计的json序列化和反序列化框架
