--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -78,6 +78,13 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:targetApi="n">
+        <!--   时间微件的设置页面    -->
+        <activity android:name="com.sq26.experience.ui.activity.WallpaperWidgetActivity"
+            android:process=":widget">
+            <intent-filter>
+                <action android:name="android.intent.action.APPWIDGET_CONFIGURE" />
+            </intent-filter>
+        </activity>
         <activity android:name="com.sq26.experience.ui.activity.NotificationActivity" />
         <activity
             android:name="com.sq26.experience.ui.activity.file.FileImageActivity"
@@ -95,26 +102,18 @@
         <activity android:name=".ui.activity.PagingActivity" />
         <activity android:name="com.sq26.experience.ui.activity.WorkManagerActivity" />
         <activity android:name=".ui.activity.NavigationActivity">
-
             <!--使用隐式深层链接必须将导航图添加到指向现有导航图的 Activity-->
-
             <!--构建项目时，Navigation 组件会将 <nav-graph> 元素替换为生成的 <intent-filter> 元素，以匹配导航图中的所有深层链接。-->
             <nav-graph android:value="@navigation/nav_navigation_graph" />
         </activity>
         <activity android:name=".ui.activity.file.FileImageListActivity" />
         <activity android:name=".ui.util.PdfActivity">
-
-
             <!-- ignore忽略app链接错误 -->
             <intent-filter tools:ignore="AppLinkUrlError">
-
-
                 <!-- 设置为,显示数据给用户 -->
                 <action android:name="android.intent.action.VIEW" />
-
                 <!-- 分类设置匹配所有 -->
                 <category android:name="android.intent.category.DEFAULT" />
-
                 <!-- 数据设置为匹配Pdf文档 -->
                 <data android:mimeType="application/pdf" />
             </intent-filter>
@@ -197,18 +196,18 @@
         </activity>
 
         <!--
-            下载服务
-            name :服务所在的位置
-            process:指定服务运行的进程
-        -->
+                        下载服务
+                        name :服务所在的位置
+                        process:指定服务运行的进程
+                    -->
         <service
             android:name=".util.network.download.DownloadService"
             android:process=":sq26" />
 
         <!--
-            跨进程通信服务
-            需要声明android:exported="true"，这样别的APP才能访问。
-        -->
+                        跨进程通信服务
+                        需要声明android:exported="true"，这样别的APP才能访问。
+                    -->
         <service
             android:name=".service.AIDLService"
             android:exported="true"
@@ -224,12 +223,12 @@
         </service>
 
         <!--
-            该provider用于本地文件访问
-            authorities：是该项目的包名+provider
-            grantUriPermissions：必须是true，表示授予 URI 临时访问权限
-            exported：必须是false
-            resource：中的@xml/file_paths是我们接下来要在资源文件目录下添加的文件
-        -->
+                        该provider用于本地文件访问
+                        authorities：是该项目的包名+provider
+                        grantUriPermissions：必须是true，表示授予 URI 临时访问权限
+                        exported：必须是false
+                        resource：中的@xml/file_paths是我们接下来要在资源文件目录下添加的文件
+                    -->
         <provider
             android:name="androidx.core.content.FileProvider"
             android:authorities="com.sq26.experience.FileProvider"
@@ -239,5 +238,30 @@
                 android:name="android.support.FILE_PROVIDER_PATHS"
                 android:resource="@xml/file_paths" />
         </provider>
+
+        <!--
+                    时钟微件
+                    <receiver> 元素需要 android:name 属性，该属性指定应用微件使用的 AppWidgetProvider。
+                    <intent-filter> 元素必须包含一个具有 android:name 属性的 <action> 元素。
+                        此属性指定 AppWidgetProvider 接受 ACTION_APPWIDGET_UPDATE 广播。
+                        这是您必须明确声明的唯一一项广播。
+                        AppWidgetManager 会根据需要自动将其他所有应用微件广播发送到 AppWidgetProvider。
+                    <meta-data> 元素指定 AppWidgetProviderInfo 资源，并且需要以下属性：
+                        android:name - 指定元数据名称。
+                            使用 android.appwidget.provider 将数据标识为 AppWidgetProviderInfo 描述符。
+                        android:resource - 指定 AppWidgetProviderInfo 资源位置。
+                    -->
+        <receiver
+            android:name="com.sq26.experience.ui.widget.WallpaperWidget"
+            android:process=":widget">
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+            </intent-filter>
+
+            <meta-data
+                android:name="android.appwidget.provider"
+                android:resource="@xml/clock_widget_info" />
+        </receiver>
+
     </application>
 </manifest>
