--- a/build.gradle
+++ b/build.gradle
@@ -3,12 +3,12 @@
 buildscript {
     //在单个位置定义版本(以防止某个框架的不同组件版本不同产生异常)
     ext {
-        roomVersion = "2.3.0"
-        lifecycleVersion = "2.3.1"
-        hiltVersion = '2.33-beta'
-        navigationVersion = "2.3.5"
+        roomVersion = "2.4.1"
+        lifecycleVersion = "2.4.0"
+        hiltVersion = '2.38.1'
+        navigationVersion = "2.4.0"
         coroutinesVersion = "1.4.3"
-        cameraxVersion = "1.1.0-alpha07"
+        cameraxVersion = "1.1.0-beta01"
         kotlin_version = '1.4.32'
     }
 
@@ -17,23 +17,19 @@ buildscript {
         //Butter Knife需要的支持
         mavenCentral()
         google()
-        jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:4.2.2'
+        classpath 'com.android.tools.build:gradle:7.0.4'
         //kotlin插件
-        classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.5.0'
+        classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.6.10'
         //Butter Knife需要的插件
         classpath 'com.jakewharton:butterknife-gradle-plugin:10.2.3'
         //使用 Safe Args 确保类型安全
         //如需在目的地之间导航，建议使用 Safe Args Gradle 插件。
         // 该插件可以生成简单的对象和构建器类，这些类支持在目的地之间进行类型安全的导航和参数传递。
-        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.3.5"
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.4.0"
         //Hilt插件, Hilt是 Android 的依赖项注入库，可减少在项目中执行手动依赖项注入的样板代码。
         classpath "com.google.dagger:hilt-android-gradle-plugin:$hiltVersion"
-        //protobuf序列化语言的插件,可自动生成对应的 Java 文件。
-        //在这查看最新版本https://mvnrepository.com/artifact/com.google.protobuf/protobuf-gradle-plugin
-        classpath "com.google.protobuf:protobuf-gradle-plugin:0.8.13"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -43,7 +39,6 @@ allprojects {
     //项目需要的依赖
     repositories {
         google()
-        jcenter()
         //阿里仓库代理
         maven { url 'https://maven.aliyun.com/repository/public' }
         maven { url 'https://maven.aliyun.com/repository/google' }
